# invoice-manager-api-rust

./: AI_USAGE.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  docker-compose.yml  openapi.yaml
crates/invoice-service/: Cargo.toml
crates/invoice-service/src/: config.rs  error.rs  lib.rs  main.rs
crates/invoice-service/src/auth/: mod.rs
crates/invoice-service/src/domain/: mod.rs
crates/invoice-service/src/psp/: mod.rs
crates/invoice-service/src/routes/: customers.rs  invoices.rs  mod.rs  pay.rs  webhooks.rs
crates/invoice-service/src/webhooks/: mod.rs
crates/invoice-service/src/workers/: mod.rs
crates/invoice-service/tests/: integration.rs
crates/invoice-service/tests/common/: mod.rs
crates/mock-psp/: Cargo.toml
crates/mock-psp/src/: main.rs
migrations/: 20240521000001_init.sql
